[package]
name = "noesis"
version = "0.3.0"
edition = "2024"
description = "CLI for the Perplexity API — search, ask, research, and reason from your terminal."
license = "MIT"
repository = "https://github.com/terry-li-hm/noesis"
homepage = "https://github.com/terry-li-hm/noesis"
keywords = ["perplexity", "ai", "search", "cli", "research"]
categories = ["command-line-utilities"]

[[bin]]
name = "noesis"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
dirs = "6"
owo-colors = "4"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
strip = true
lto = true
